--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,2 +1,8 @@
-// Colours
+// Theme Colours
 $grey: #333333;
+
+// Step Button Colours
+$sb-off: ghostwhite;
+$sb-hover: lightskyblue;
+$sb-on: blue;
+$sb-border: black;
