--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -2,7 +2,8 @@
 $grey: #333333;
 
 // Step Button Colours
-$sb-off: ghostwhite;
-$sb-hover: lightskyblue;
-$sb-on: blue;
+$sb-inactive: ghostwhite;
+$sb-inactive-hover: lightslategrey;
+$sb-active: blue;
+$sb-active-hover: lightskyblue;
 $sb-border: black;
