--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -2,8 +2,6 @@
 $grey: #333333;
 
 // Step Button Colours
-$sb-inactive: ghostwhite;
-$sb-inactive-hover: lightslategrey;
-$sb-active: blue;
-$sb-active-hover: lightskyblue;
+$sb-active: royalblue;
+$sb-inactive: lightgrey;
 $sb-border: black;
