--- a/app/styles/base/_foundation-settings.scss
+++ b/app/styles/base/_foundation-settings.scss
@@ -92,8 +92,8 @@ $breakpoint-classes: (small medium large);
 // 3. The Grid
 // -----------
 
-$grid-row-width: 480px; // $global-width
-$grid-column-count: 8;  // 12
+$grid-row-width: $global-width;
+$grid-column-count: 12;
 $grid-column-gutter: (
   small: 0px,
   medium: 0px,
