--- a/app/styles/components/_components.scss
+++ b/app/styles/components/_components.scss
@@ -1,3 +1,20 @@
+.controls {
+  display: flex;
+  justify-content: left;
+
+  .button {
+    padding: .75rem 3rem;
+    margin-right: 1.4rem;
+    margin-left: 1.4rem;
+  }
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  border: 1px solid $sb-border;
+}
+
 .column-row {
   display: flex;
   list-style: none;
