--- a/app/styles/components/_components.scss
+++ b/app/styles/components/_components.scss
@@ -1,29 +1,32 @@
 .controls {
   display: flex;
-  justify-content: left;
+  justify-content: center;
 
   .button {
     padding: .75rem 3rem;
-    margin-right: 1.4rem;
-    margin-left: 1.4rem;
+    margin-right: 2rem;
+    margin-left: 2rem;
   }
 }
 
 .menu {
   display: flex;
   justify-content: center;
-  border: 1px solid $sb-border;
+  border: 1px solid lightslategrey;
 }
 
-.column-row {
+.sequencer-grid {
   display: flex;
+  justify-content: center;
   list-style: none;
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
+
+  padding: 6rem;
 }
 
-.step-column {
+.grid-column {
   display: flex;
   list-style: none;
   -webkit-flex-direction: column;
@@ -31,6 +34,27 @@
   flex-direction: column-reverse;
   border-radius: 5px;
   justify-content: center;
+
+  @-webkit-keyframes blink {
+    0%   { opacity: 0.6; }
+    100% { opacity: 1; }
+  }
+  @-moz-keyframes blink {
+    0%   { opacity: 0.6; }
+    100% { opacity: 1; }
+  }
+  @-o-keyframes blink {
+    0%   { opacity: 0.6; }
+    100% { opacity: 1; }
+  }
+  @keyframes blink {
+    0%   { opacity: 0.6; }
+    100% { opacity: 1; }
+  }
+
+  &.playing {
+    animation: blink 1s
+  }
 
   &.active {
     background: lightslategrey;
