--- a/app/styles/components/_components.scss
+++ b/app/styles/components/_components.scss
@@ -15,6 +15,11 @@
   border: 1px solid lightslategrey;
 }
 
+.menu-component {
+  display: flex;
+  justify-content: center;
+}
+
 .sequencer-grid {
   display: flex;
   justify-content: center;
