Implemented midi note queueing with rAF lookahead

--- a/app/styles/components/_components.scss
+++ b/app/styles/components/_components.scss
@@ -13,6 +13,9 @@
   display: flex;
   justify-content: center;
   border: 1px solid lightslategrey;
+
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .menu-component {
