--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -2,6 +2,6 @@
 $grey: #333333;
 
 // Step Button Colours
-$sb-active: royalblue;
+$sb-active: darkorchid;
 $sb-inactive: lightgrey;
 $sb-border: black;
