Added grid status change functionality

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -4,4 +4,5 @@ $grey: #333333;
 // Step Button Colours
 $sb-active: darkorchid;
 $sb-inactive: lightgrey;
+$sb-inactive-grid: lightslategrey;
 $sb-border: black;
