Updated step button styling for inactive grid

--- a/app/styles/components/_components.scss
+++ b/app/styles/components/_components.scss
@@ -78,10 +78,10 @@
 
   &.active {
     background: $sb-active;
+  }
 
-    &.inactive-grid {
-      background: $sb-inactive-grid;
-    }
+  &.inactive-grid {
+    opacity: 0.4;
   }
 
   &:hover {
