Updated step button styling to display active buttons in a different colour for each grid

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -2,6 +2,9 @@
 $grey: #333333;
 
 // Step Button Colours
-$sb-active: darkorchid;
+$sb-active-0: darkorchid;
+$sb-active-1: orchid;
+$sb-active-2: darkviolet;
+$sb-active-3: mediumorchid;
 $sb-inactive: lightgrey;
 $sb-border: black;
